--- a/cs/네트워크.md
+++ b/cs/네트워크.md
@@ -102,3 +102,50 @@ R: link transmission rate(capacity, link bandwidth)
 packet transmission delay = L/R
 
 ### Network core
+mesh of interconnected packet switches and links that interconnects Internet end systems
+
+#### Packet Switching
+* messages: data that end systems exchange
+* packets: smaller chunks of data from message
+* packets are forwarded from one router to the next, across links on path from source to destination 
+* packets are transmitted over each communication link at a rate equal to the full transmission rate of the link
+
+##### Store and Forward Transmission
+* entire packet must arrive at router(packet switch) before it can be transmitted on next link
+
+##### Queueing delay and loss
+* output buffer(output queue)
+    * stores packets that the router is about to send into that link
+    * If an arriving packet needs to be transmitted onto a link but finds the **link** busy with the transmission of another packet, the arriving packet must wait in the **output buffer**
+
+* queuing delay
+    * If an arriving packet needs to be transmitted onto a link but finds the link busy with the transmission of another packet, the arriving packet must wait in the output buffer
+* packet loss
+    * when buffer is full with other packets for transmission, either the arriving packet or one of the already-queued packets will be dropped
+
+##### Routing
+* determines source-destination route taken by packets
+* routing algorithm
+    * refers forwarding table and decide which link to forward to    
+    * global metric should be minimized
+
+##### Forwarding
+* move packets from router’s input to appropriate router output
+
+### Circuit Switching
+* reources needed along a path (buffers, link transmission rate) to provide for communication between the end systems are reserved
+* uses dedicated resources(does not share resources)
+
+#### FDM (frequency division multiplexing)
+* frequency spectrum of a link is divided up among the connections established across the link
+#### TDM (time division multiplexing)
+* time is divided into frames of fixed duration, and each frame is divided into a fixed number of time slots
+
+### Packet switching vs Circuit switching
+* circuit switching pre allocates transmission link and it cannot be used by other even if user is inactive
+* packet switching allocates transmission link use on demand
+
+* packet switching is great for bursty data (by sharing resource)
+* excessive congestion control is possible with packet switching
+
+### Network of Networks
