--- a/cs/네트워크.md
+++ b/cs/네트워크.md
@@ -26,10 +26,10 @@ running on another end system
 * format and order of messages exchanged between two or more communicating entites, as well as the actions taken on the transmission and/or receipt of a message or other event
 
 ### Network Edge
-host = end systems
+* host = end systems
 
 ### Access Network
-the network that physically connects an end system to the first router(edge router)
+* the network that physically connects an end system to the first router(edge router)
 
 connect by 
 * residiential access nets
@@ -54,14 +54,14 @@ are encoded at different frequencies
       -> **unlink DSL, homes share access network**
     * CTMS turns analog signals sent into digital signals 
     * every packet sent by the head end travels downstream on every link to every home and every
-packet sent by a home travels on the upstream channel to the head end.
+* packet sent by a home travels on the upstream channel to the head end.
 
 * Ethernet
     * uses twisted-pair copper wire to connect to an Ethernet switch
     * users have 100Mbps or 1Gbps to ethernet switch, 1Gbps or 10Gbps to servers
 
 * Wireless LAN
-shared wireless access network connects end system to router through base station(access point)
+* shared wireless access network connects end system to router through base station(access point)
     * WLAN -> MIMO(multi input multi output)
         * 802.11n (< 135Mbps, 2,4and 5GHZ band)
 		* 802.11ac
@@ -70,9 +70,9 @@ shared wireless access network connects end system to router through base statio
         * provided by telco operator
           (3G, 4G, LTE)
 #### Physical Media
-that connects transmitter and receiver
+* that connects transmitter and receiver
 ##### Guided media
-signals propagate in solid media
+* signals propagate in solid media
     * twisted copper cable
         * two insulated copper wires
     * coaxical cable
@@ -83,7 +83,7 @@ signals propagate in solid media
         * high speed operation
         * low error rate
 ##### Unguided media
-signals propagate freely
+* signals propagate freely
     * radio
         * signal carried in electromagnetic spectrum
         * bidirectional
@@ -97,12 +97,12 @@ signals propagate freely
             * wide-area(WAN)
             * satellite
 ##### How to calculate packet transmission delay
-L: length of packet
-R: link transmission rate(capacity, link bandwidth)
-packet transmission delay = L/R
+* L: length of packet
+* R: link transmission rate(capacity, link bandwidth)
+* packet transmission delay = L/R
 
 ### Network core
-mesh of interconnected packet switches and links that interconnects Internet end systems
+* mesh of interconnected packet switches and links that interconnects Internet end systems
 
 #### Packet Switching
 * messages: data that end systems exchange
