--- a/cs/네트워크.md
+++ b/cs/네트워크.md
@@ -149,3 +149,150 @@ are encoded at different frequencies
 * excessive congestion control is possible with packet switching
 
 ### Network of Networks
+
+
+<hr>
+
+## Transport Layer
+
+### Introduction
+* Transport Layer provides logical connection between application processes running on different host
+* Transport Layer breaks pplication messages into segments when sending
+* Transport Layer is implemented on the end systems.
+    * This means routers do not examine fields of the transport layer segments encapulated with the datagram. It only acts as network layer field of datagram.
+
+#### Transport Layer vs Network Layer
+* Transport Layer: logical connection between application processes running on different host
+* Network Layer: logical connection between different host
+
+### Overview of the Transport Layer in the Intenet
+* TCP & UDP packets as segments, network layer packets as datagram
+    * usually UDP packets are also called datagram
+* IP(Internet's network layer protocol) is unreliable service
+    * best effort delivery service
+    * segment delivery not guaranteed
+    * orderly delivery of segments not guaranteed
+    * integrity of data not guaranteed
+* Transport Layer multiplexing and demultiplexing
+    * extending host-to-host delivery to process-to-process delivery
+* UDP is unreliable service
+    * transport layer multiplexing and demultiplexing
+    * provides integrity checking by including error detection fields in their segment's header
+* TCP is reliable service
+    * provides reliable data transfer
+        * flow control
+        * congestion control
+        * seq num
+        * ack
+        * timer
+
+### Multiplexing and Demultiplexing
+* Tranport Layer -> sockets -> processes
+* Demultiplexing: delivering the data in transport layer segment to the correct socket
+* Multiplexing: gathering data chunks at the source host from different sockets, encalsulate each data with header, and passing it to network layer
+* Unique socket identifiers, special field that indicate which socket data should be delivered is needed
+    * source port number field, destination port number field
+    * 0-1023: well known port numbers
+* UDP
+    * assigns a port number to socket
+    * one process per socket
+    * is fully identified by destination IP address, destination port number
+* TCP
+    * assigns a port number to socket
+    * multiple processes per socket (but not necessarily)
+    * is fully identified by destination IP address, destination port number, source IP address, source port number
+
+* UDP vs TCP
+    * two arriving TCP segments with same destination but different source will be directed to different sockets, but for UDP segments it will be directed to same socket
+
+### UDP
+* immediately passes segment to network layer
+* no connection establishment
+* no connection state
+* smalle packet header overhead
+
+### UDP Segment Structure
+
+| 16bit | 16bit |
+| --- | --- |
+| source port | dest port |
+|  length | Checksum |
+| application data |
+
+### UDP Checksum
+* sender side performs the **1s complement** of the sum of all the 16-bit words in the segment, with any overflow encountered during the sum being wrapped around
+    * if overflow occurs at msb, add it to lsb
+    * at receiver side sum of all 16bit words should be 111111~~, or else there are error
+* no recover
+
+### Principles of reliable data
+![](../.github/cs/rdt1.png)
+
+### RDT 1.0
+![](../.github/cs/rdt2.png)
+
+### RDT 2.0
+
+* Error detection: detect bit error
+* Receiver feedback: ACK, NACK
+* Retransmission
+* stop-and-wait: when sender awaits for retransmitted packet response, rdt_send cannot be called
+
+![](../.github/cs/rdt3.png)
+
+### RDT 2.1
+
+* ACK and NACK could be corrupted
+    * add sequence number to solve
+
+![](../.github/cs/rdt4.png)
+![](../.github/cs/rdt5.png)
+
+### RDT 2.2
+
+* NACK replaced with duplicate ACK
+
+![](../.github/cs/rdt6.png)
+![](../.github/cs/rdt7.png)
+
+### RDT 3.0
+
+![](../.github/cs/rdt8.png)
+
+### Pipelined RDT Protocols
+
+* scenarios
+    * no loss
+    * lost packet
+    * lost ack
+    * premature timeout
+    
+* stop-ans-wait slows performance
+
+![](../.github/cs/pipeline_rdt1.png)
+
+* pipelined rdt
+
+![](../.github/cs/pipeline_rdt2.png)
+
+### Go Back N
+
+* GBN sender events
+    * invocation from above: send only if window is not full
+    * receipt of ack: stop timer if received correct ack 
+    * timeout: retransmit packets from base (single timer)
+
+* GBN receiver events
+    * if correct packet received send ACK
+    * discard packets for other cases
+
+### Selective Repeat
+
+* sender retransmit only those packets that it suspects were received in error 
+* SR sender events
+    * invocation from above: send only if window is not full or buffer
+    * timeout: (multiple timer)
+    * receipt of ack
+* SR receiver events
+    * packet with seq num in [recv_base, recv_base+N-1] but out of order packet: send ACK and buffer 
+    * packet with seq num in [recv_base, recv_base+N-1] and correct order packet: send ACK
