--- a/cs/네트워크.md
+++ b/cs/네트워크.md
@@ -296,3 +296,40 @@ are encoded at different frequencies
 * SR receiver events
     * packet with seq num in [recv_base, recv_base+N-1] but out of order packet: send ACK and buffer 
     * packet with seq num in [recv_base, recv_base+N-1] and correct order packet: send ACK
+
+### TCP
+* connection oriented service: establish connection before sending data
+* full duplex service
+* point-to-point: sigle sender, single receiver
+* MSS(maximum segment size)
+    * maximum amount of application data in the segment, not maximum TCP segment size including header
+* MTU(maximum transport unit)
+    * length of the largest link-layer frame that can be sent by the local sending host
+### TCP Segment Structure
+
+![](../.github/cs/tcp1.png)
+
+* sequence number for a segment is therefore the byte-stream number of the first byte in the segment
+* acknowledgment number is the sequence number of the next byte expected
+* rdt ACK vs tcp ACK
+    * rdt ACK: received segment
+    * tcp ACK: expected segment
+
+### Round-Trip Time Estimation and Timeout
+
+* SampleRTT
+* EstimatedRTT
+    * average value of SampleRTT
+    * EstimatedRTT=(1−α)⋅EstimatedRTT+α⋅SampleRTT
+    * recommanded value of α is 0.125
+* DevRTT
+    * variability of RTT
+    * DevRTT=(1−β)⋅DevRTT+β⋅|SampleRTT−EstimatedRTT|
+* Timeout should equal to the EstimatedRTT plus some margin
+    * TimeoutInterval=EstimatedRTT+4⋅DevRTT
+
+### Flow Control
+
+### TCP Connection Management
+
+![](../.github/cs/3handshake.png)
