실행 계회  마무리

--- a/데이터베이스/Real MySQL/6. 실행계획.md
+++ b/데이터베이스/Real MySQL/6. 실행계획.md
@@ -1149,3 +1149,387 @@ WHERE reg_date BETWEEN '2010-01-01' AND '2010-12-30';
 * 이렇게 구분하는 이유는 DISTINCT 키워드가 영향을 미치는 범위가 달라지기 때문이다
 * 집합 함수와 같이 DISTINCT가 사용되는 쿼리에서 DISTINCt 처리가 인덱스를 사용하지 못할 때는 항상 임시 테이블이 필요하다
   (하지만 실행 계획엔 using temporary가 표시되지 않는다)
+
+* SELECT DISTINCT
+    * 단순히 SELECT 되는 레코드 중에서 유니크한 레코드만 가져오고자 하면 SELECT DISTINCT 형태의 쿼리 문장을 사용한다
+    * 이 경우에는 GROUP BY와 거의 같은 방식으로 처리된다
+    * 단지 차이는 SELECT DISTINCT의 경우에는 정렬이 보장되지 않는다는 점이다
+
+    * DISTINCT는 레코드를 유니크하게 SELECT하는 것이지 칼럼을 유니크하게 조회하는 것이 아니다
+    * 아래 쿼리는 (first_name+last_name) 전체가 유니크한 레코드를 가져온다
+    ```
+    SELECT DISTINCT first_name, last_name FROM employees;
+    ```
+
+    * 칼럼에 괄호를 치더라도 MySQL 서버는 해당 괄호가 없는 것처럼 실행한다
+    ```
+    SELECT DISTINCT (first_name), last _name FROM employees;
+    ```
+
+* 집합 함수와 함께 사용된 DISTINCT
+    * 집합 함수 내에서 DISTINCT가 사용될 수 있는데, 일반적인 SELECT DISTINCT와 다른 형태로 해석된다
+    * 집합 함수 내에서는 그 집합 함수의 인자로 전달된 칼럼 값이 유니크한 것들을 가져온다
+
+    ```
+    EXPLAIN
+    SELECT COUNT(DISTINCT s.salary)
+    FROM employees e, salaries s
+    WHERE e.emp_no=s.emp_no
+    AND e.emp_no BETWEEN 100001 AND 100100;
+    ```
+
+    * 이 쿼리는 내부적으로 COUNT(DISTINCT s.salary)를 처리하기 위해 임시 테이블을 사용한다
+    * 하지만 이 쿼리의 실행 계획엔 임시 테이블을 사용한다는 메시지는 표시되지는 않는다
+
+    * employees 테이블과 salariess 테이블을 조인한 결과에서 salary 칼럼의 값만 저장하기 위한 임시 테이블을 만들어서 사용한다
+    * 이때 임시 테이블의 salary 칼럼에는 유니크 인덱스가 생성되기 때문에 레코드 건수가 많아진다면 상당히 느려질 수 있는 형태의 쿼리다
+    
+    * 만약 위의 쿼리에 COUNT(DISTINCT ...)를 하나 더 추가해서 다음과 같이 변경해보자
+    ```
+    EXPLAIN
+    SELECT COUNT(DISTINCT s.salary), COUNT(DISTINCT s.last_name)
+    FROM employees e, salaries s
+    WHERE e.emp_no=s.emp_no
+    AND e.emp_no BETWEEN 100001 AND 100100;
+    ``` 
+
+    * 실행 계획은 이전 쿼리와 동일하지만 임시 테이블이 하나 더 필요하다
+    * 이전 쿼리는 DISTINCT 처리를 위해 인덱스를 사용할 수 없어서 임시 테이블이 필요했다
+    * 하지만 다음 쿼리는 인덱스를 풀 스캔하거나 레인지 스캔하면서 임시 테이블 없이 최적화된 처리를 수행할 수 있다
+
+    ```
+    SELECT COUNT(DISTINCT emp_no) FROM employees;
+    ```
+
+### 6.3.5 임시 테이블 (Using temporary)
+
+* MySQL 엔진이 스토리지 엔진으로부터 받은 받아온 레코드를 정렬하거나 그룹핑할 때는 내부적인 임시 테이블을 사용한다
+* 여기서 임시 테이블은 `CREATE TEPMORARY TABLE`로 생성한 테이블이 아니다
+    * 처음엔 메모리에 생성됐다가 용량이 커지면 디스크로 옮겨진다
+* 원본 테이블의 스토리지 엔진과 관계 없이 임시 테이블이 메모리를 사용할 땐 MEMORY, 디스크에 저장될 땐 MyISAM 스토리지 엔진을 사용한다
+
+* 임시 테이블이 필요한 쿼리
+    * 아래의 경우 또는 이 밖에도 인덱스를 사용하지 못할 때는 내부 임시 테이블을 사용한다
+        * ORDER BY와 GROUP BY에 명시된 칼럼이 다른 쿼리
+        * ORDER BY나 GROUP BY에 명시된 칼럼이 조인의 순서상 첫 번째 테이블이 아닌 쿼리
+        * DISTINCT와 ORDER BY가 동시에 쿼리에 존재하는 경우 또는 DISTINCT가 인덱스로 처리되지 못하는 쿼리
+        * UNION이나 UNION DISTINCT가 사용된 쿼리
+        * UNION ALL이 사용된 쿼리
+        * 쿼리의 실행 계획에서 select_type이 DERIVED인 쿼리
+
+* 임시 테이블이 디스크에 생성되는 경우(MyISAM 스토리지 엔진을 사용)
+    * 기본적으로 메모리 상에 만들어지지만 다음과 같은 조건을 만족하면 메모리에 임시 테이블을 생성할 수 없으므로 디스크에 MyISAM 테이블로 만들어진다
+        * 임시 테이블에 저장해야 하는 내용 중 BLOB나 TEXT와 같은 대용량 칼럼이 있는 경우
+        * 임시 테이블에 저장해야 하는 레코드의 전체 크기나 UNION이나 UNION ALL에서 SELECT되는 칼럼 중에서 길이가 512 바이트 이상인 크기인 칼럼이 있는 경우
+        * GROUP BY나 DISTINCT 칼럼에서 512 바이트 이상인 크기의 칼럼이 있는 경우
+        * 임시 테이블에 저장할 데이터의 전체 크기가 tmp_table_size 또는 max_heap_table_size 시스템 설정 값보다 큰 경우
+
+    * 첫 번째부터 세 번째까지는 처음부터 디스크에 MyISAM 스토리지 엔진을 사용해서 내부 임시 테이블이 만들어진다
+    * 하지만 네 번째는 처음엔 메모리에 생성됐다 시스템 설정 값을 넘어가는 순간 디스크로 옮겨진다
+
+* 임시 테이블 관련 상태 변수
+    * Using temporary가 표시된다고 해서 임시 테이블을 하나만 사용했다는 것을 의미하는 것은 아니다
+    * 사용된 임시 테이블에 대한 정보를 확인하기 위해선 아래 명령어를 사용하면 된다
+        ```
+        SHOW SESSION STATUS LIKE 'Created_tmp%';
+        ```
+        *  Created_tmp_tables: 쿼리의 처리를 위해 생성된 내부 임시 테이블의 개수를 누적하는 상태값. 메모리와 디스크에 만든 테이블을 구분하지 않고 누적한다
+        * Created_tmp_disk_tables: 디스크에 내부 임시 테이블이 만들어진 개수만 누적해서 가지고 있는 상태 값
+
+* 임시 테이블 관련 주의사항
+    * 성능 상 이슈가 될만한 부분은 내부 임시 테이블이 MyISAM 테이블로 디스크에 생성되는 경우다
+    ```
+    SELECT * FROM employees GROUP BY last_name ORDer BY first_name;
+    ```
+
+    * 이 쿼리는 GROUP BY와 ORDER BY 칼럼이 다르고 last_name 칼럼에 인덱스가 없기 때문에 임시 테이블과 정렬 작업까지 수행해야 하는 가장 골칫거리가 되는 쿼리 형태다
+
+    * 쿼리의 실행 순서는 아래와 같다
+        1. Employees 테이블의 모든 칼럼을 포함한 임시 테이블을 생성(MEMORY 테이블)
+        2. Employees 테이블로부터 첫 번째 레코드를 InnoDB 스토리지 엔진으로부터 가져와서
+        3. 임시 테이블에 같은 last_name이 있는지 확인 
+        4. 같은 last_name이 없으면 임시 테이블에 INSERT
+        5. 같은 last_name 있으면 임시 테이블에 UPDATE 또는 무시
+        6. 임시 테이블의 크기가 특정 크기보다 커지면 임시 테이블을 MyISAM 테이블로 디스크로 이동
+        7. Employees 테이블에서 더 읽을 레코드가 없을 때까지 2~6번 과정 반복
+        8. 최종 내부 임시 테이블에 저장된 결과에 대해 정렬 작업 수행
+        9. 클라이언트에 결과 반환
+    
+    * 가능하면 인덱스를 이용해 처리하고 처음부터 테이블이 필요하지 않게 만드는 것이 가장 좋다
+    * 만약 이렇게 하기 어렵다면 내부 임시 테이블이 메모리에만 저장될 수 있게 가공 대상 레코드를 적게 만드는 것이 좋다
+    * 하지만 레코드 건수를 줄일 수 없다고 해서 tmp_table_size똔ㄴ max_heap_table_size 시스템 설정 변수를 무조건 크게 설정하면 MySQL서버가 여유 메모리를 내부 임시 테이블이 모두 사용할 수 있으니 주의해야 한다
+
+    * MEMORY 테이블의 모든 칼럼은 고정 크기가 동일하다
+    * first_name이라는 칼럼이 VARCHAR(512)이고 문자집합이 utf8이라면, 테이블에서 first_name이 차지하는 공간은 512*3이다
+    * 실제 first_name 칼럼의 값과 관계없이 테이블에 정의된 크기만큼 메모리 테이블에서 공간을 차지한다
+    * 따라서 칼럼이 데이터 타입 선정도 가능한 작게 해주는 것이 좋다
+
+### 테이블 조인
+
+* MySQL이 모든 버전(적어도 5.7이하는 전부)에서 조인 방식은 네스티드 루프로 알려진 중첩된 루프와 같은 형태만 지원한다
+* 그리고 조인되는 각 테이블 간의 레코드를 어떻게 연결할 지에 따라 여러가지 조인으로 나뉜다
+
+* 조인의 종류
+    * 크게 INNER JOIN, OUTER JOIN으로 나뉜다
+    * OUTER JOIN은 LEFT OUTER JOIN, RIGHT OUTER JOIN, FULL OUTER JOIN으로 나뉜다
+    * 조인이 조건에 따라 NATURAL JOIN, CROSS JOIN(FULL JOIN, CATESIAN JOIN)으로 나뉜다
+
+    * 조인을 처리할 땐 어떤 테이블을 먼지 얽을 지 결정하는 것이 중요하며 처리해야 할 작업량도 상당히 달라진다
+        * INNER JOIN은 어떤 테이블을 먼저 읽어도 결과가 달라지지 않으므로 옵티마이저가 순서를 조절해서 최적화할 수 있다
+        * OUTER JOIN은 순서가 중요해서 옵티마이저가 순서를 조절할 수 없다
+
+* JOIN(INNER JOIN)
+    * 아래와 같이 중첩된 for문 또는 while문과 같은 반복 루프 형태로 실행하는 형태로 조인이 처리되는 것을 네스티드 루프 방식이라고 한다
+
+    ```
+    for(record1 in table1) {
+        for(record2 in table2) {
+            if(record1.join_column == record2.join_column) {
+                join_record_found(record1.*, record2.*);
+            } else {
+                join_record_notfound();
+            }
+        }
+    }
+    ```
+
+    * for문이 바깥쪽을 아우터 테이블, 안쪽을 이너 테이블이라고 한다
+    * 아우터 테이블은 이너 테이블보다 먼저 읽어야 해서 드라이빙 테이블이라고도 한다
+    * 반대로 이너 테이블은 조인에서 끌려가는 역할을 한다고 해서 드리븐 테이블이라고도 한다
+
+* OUTER JOIN
+    ```
+    for(record1 in table1) {
+        for(record2 in table2) {
+            if(record1.join_column == record2.join_column) {
+                join_record_found(record1.*, record2.*);
+            } else {
+                join_record_found(record1.*, NULL);
+            }
+        }
+    }
+    ```
+
+    * 조건에 만족하는 경우가 없는 경우 table2의 칼럼을 전부 NULL로 채운다
+    * 따라서 아우터 테이블에 따라 결과가 달라진다
+    
+    * 아우터 테이블이 조인의 왼쪽, 오른쪽에 있는지에 따라 LEFT OUTER JOIN, RIGHT OUTER JOIN, FULL OUTER JOIN으로 다시 나뉜다
+
+    ```
+    SELECT * 
+    FROM employees e
+        LEFT OUTER JOIN salaries s ON s.emp_no = e.emp_no;
+
+    SELECT *
+        FROM salaries s
+            RIGHT OUTER JOIN employees e ON e.emp_no = s.emp_no;
+    ```
+
+    * 위의 쿼리는 아우터 테이블이 동일하기 떄문에 결과가 같다
+    * 이러한 혼동을 방지하기 위해 일반적으로 LEFT OUTER JOIN으로 통일해서 사용한다
+
+    * 조인 키워드를 기준으로 왼쪽 태이블도 OUTER JOIN하고, 오른쪽 테이블도 OUTER JOIN하는 것이 FULL OUTER JOIN이다
+    * MySQL은 FULL OUTER JOIN을 지원하지 않는다
+
+    * LEFT OUTER JOIN에서 쉽게 실수할 수 있는 부분들이 있는데 이를 살펴보자
+    * 실행계획에서 INNER JOIN인지 OUTER JOIN인지는 확인할 수 없다
+        * 따라서 OUTER JOIN으로 의도한 쿼리가 INNER JOIN으로 실행됐는지 주의해야 한다
+    * OUTER JOIN에서 레코드가 없을 수도 있는 쪽의 테이블에 대한 조건은 반드시 LEFT JOIN의 ON절에 명시하자
+        * 그렇지 않으면 옵티마이저는 OUTER JOIN을 내부적으로 INNER JOIN으로 변형시켜서 처리할 수도 있다
+        * WHERE절에 명시된 조건은 OUTER JOIN이나 INNER JOIN에 관계없이 조인된 결과에 대해 모두 적용된다
+        * 따라서 OUTER JOIN에선 가능한 모든 조건을 ON절에 명시하자
+    
+    ```
+    SELECT *
+    FROM employees e
+        LEFT OUTER JOIN salaries s ON s.emp_no = e.emp_no
+    WHERE s.salary > 5000;
+    ```
+
+    * 위 쿼리의 LEFT OUTER JOIN 절과 WHERE 절은 서로 충돌되는 방식으로 사용됐다
+    * OUTER JOIN으로 연결되는 테이블의 칼럼에 대한 조건이 ON절에 명시되지 않고 WHERE 절에 명시됐기 떄문이다
+    *  그래서 MySQL 서버는 이 쿼리를 최적화 단계에서 다음과 같은 쿼리로 변경한 후 실행한다
+
+    ```
+    SELECT *
+    FROM employees e
+        INNER JOIN salaries s ON s.emp_no = e.emp_no
+    WHERE s.salary > 5000;
+    ```
+
+    * OUTER JOIN이 옵티마이저에 의해 INNER JOIN으로 바뀌었다
+
+    * 쿼리의 의도를 명확하게 하기 위해서 아래의 2가지 중 한 방식으로 수정해야 한다
+    ```
+    // OUTER JOIN 처리 원할 시
+    SELECT *
+    FROM employees e
+        LEFT OUTER JOIN salaries s ON s.emp_no=e.emp_no AND s.salary > 5000;
+    
+    // INNER JOIN 처리 원할 시
+    SELECT *
+    FROM employees e
+        INNER JOIN salaries s ON s.emp_no=e.emp_no
+    WHERE s.salary > 5000;
+    ```
+
+* 카테시안 조인
+    * FULL JOIN 또는 CROSS JOIN이라고도 한다
+    * 두 테이블 간의 연결 조건 없이 모든 레코드 조합을 결과로 가져오는 조인 방식
+    * 각 테이블의 레코드 건수가 많이지면 기하급수적으로 결과가 늘어난다
+
+    * 되도록 피하는 것이 좋다
+    * 따라서 N개의 테이블의 조인이 수행되는 쿼리에서는 반드시 조인 조건은 N-1개 또는 그 이상이 필요하며, 모든 테이블이 한 번 이상 조인 조건에 사용돼야 한다
+    
+    * 카테시안 조인은 레코드 한건만 조회하는 여러 개의 쿼리를 하나의 쿼리로 모아서 실행하기 위해 사용되기도 한다
+    ```
+    SELET * FROM departments WHERE dept_no='d001';
+    SELECT * From employees WHERE emp_no=1000001;
+
+    // 위의 두 쿼리를 결과를 한 번에 가져올 수 있다 
+    SELECt d.*, e.*
+    FROM departments d, employees e
+    WHERE dept_no = 'd001' AND emp_no=1000001;
+    ```
+
+    * 하지만 카테시안으로 묶은 2개의 단위 쿼리가 반환하는 레코드가 항상 1건이라는 것이 보장되지 않으면 예상보다 더 많은 결과를 가져올 수도 있다
+
+    * SQL 표준에서 CROSS JOIN은 카테시안 조인을 의미하지만 MySQL 표준에선 INNER JOIN을 의미한다
+    * MySQL에서 카테시안 조인과 이너 조인은 문법으로 구분되는 것이 아니라 조인 조건이 있는 여부로 구분된다
+
+* NATURAL JOIN
+    * 두 테이블에 존재하는 칼럼 중 이름이 같은 칼럼을 전부 조인한다
+    ```
+    SELECT *
+    FROM empoyees e, salaries s
+    WHERE e.emp_no=s.emp_no;
+
+    SELECT *
+    FROM employees e
+        INNER JOIN salaries s ON s.emp_no=e.emp_no;
+
+    SELECT *
+    FROM employees e
+        INNER JOIN salaries s USING (emp_no);
+    ```
+
+    * USING(emp_no)는 두번째 쿼리의 `ON s.emp_no=e.emp_no`와 같은 의미로 사용된다
+
+    * NATURAL JOIN은 조인 조건을 명시하지 않아도 된다는 장점이 있지만, 각 테이블의 칼럼 이름에 의해 쿼리가 자동으로 변경될 수 있다는 문제가 있다
+
+* Single-sweep multi join
+    * MySQL의 네스티드 루프 조인을 자주 Single-sweep multi join이라고 표현하기도 한다
+
+* 조인 버퍼를 이용한 조인(Using join buffer)
+    * 조인할 때 드라이빙 테이블은 한 번에 쭉 읽지만 드리븐 테이블은 여러 번 읽는다
+    * 드리븐 테이블을 매번 읽어오는 것은 성능에 큰 영향을 끼치기 떄문에 옵티마이저는 최대한 드리븐 테이블의 검색이 인덱스를 사용할 수 있게 실행 계획을 수립한다
+    * 하지만 어떤 방식으로도 드리븐 테이블의 풀 테이블 스캔이나 인덱스 풀 스캔을 피할 수 없다면 옴티마이저는 드라이빙 테이블에서 읽은 레코드를 메모리에 캐시한 후 드리븐 테이블과 이 메모리 캐시를 조인 하는 형태로 처리한다
+    * 이때 사용되는 메모리 캐시를 조인 버퍼라고 한다
+    * 조인 버퍼는 join_buffer_size라는 시스템 설정 변수로 크기를 제한할 수 있으며, 조인이 완료되면 조인 버퍼는 바로 해제된다
+
+    * 아래 쿼리를 살펴보자
+    ```
+    SELECT *
+    FROM dept_emp de, employees e
+    WHERE de.from_date > '2000-01-01' AND e.emp_no < 109004;
+    ```
+
+    * 우선 dept_emp 테이블이 드라이빙 테이블이 되고, employees 테이블이 드리븐 테이블이 되어 조인이 수행된다고 가정하자
+        * dept_emp 테이블에서 조건 `from_date > '2000-01-01'`을 만족하는 각 레코드 별로 employees 테이블에서 `emp_no < 109004` 조건을 만족하는 레코드 99003건씩 가져온다
+        * 각 dept_emp 레코드에 대해 employees 테이블을 읽는다
+          (가져오는 결과는ㄴ 같지만 이 작업을 dept_emp 테이블에서 조회한 레코드 건수 만큼 반복한다)
+
+    * 같은 처리를 조인 버퍼를 사용하게 되면 어떻게 달라질까?
+    * 위 쿼리의 실제 실행 계획을 살펴보면 dept_emp 테이블이 드라이빙 테이블이 되어 조인되고, employees  테이블을 읽을 때는 조인 버퍼를 이용한다는 것을 extra 칼럼 내용으로 알 수 있다
+
+    * 실행 순서는 다음과 같다
+        1. dept_emp 테이블의 ix_fromdate 인덱스를 이용해 `from_date > 2000-01-01` 조건을 만족시키는 레코드를 검색한다
+        2. 조인에 필요한 나머지 칼럼을 모두 dept_emp 테이블로부터 읽어서 조인 버퍼에 저장한다
+        3. employees 테이블의 프라이머리 키를 이용해 (emp_no < 1090004) 조건을 만족하는 레코드를 검색한다
+        4. 3번에서 검색된 결과(employees)에 2번의 캐시된 조인 버퍼의 레코드(dept_emp)를 결합해서 반환한다
+
+    * 위 과정에서 중요한 점은 조인 버퍼가 사용되는 쿼리에서는 조인의 순서가 거꾸로인 것처럼 실행된다는 것이다
+    * 조인 버퍼를 사용할 땐 employees(드리븐 테이블)를 기준으로 dept_emp(드라이빙 테이블)의 결과를 조인한다
+        (반면, 사용하지 않을 땐 dept_emp(드라이빙 테이블)을 기준으로 employees(드리븐 테이블)을 조인한다)
+    
+    * 단, 조인 버퍼를 사용할 경우, 위와 같은 이유로 인해 정렬 순서가 흐트러질 수도 있다
+
+* 조인 관련 주의사항
+    * 조인 처리해서 특별히 주의해야 할 부분은 실행 결과의 정렬 순서와 INNER JOINa과 OUTER JOIN의 선택이다
+    
+    * 조인 실행 결과 정렬 순서
+        * 일반적으로 조인으로 쿼리가 실행되는 경우, 드라이빙 테이블로부터 레코드를 읽는 순서가 전체 쿼리의 결과 순서에 그대로 적용되는 것이 일반작이다
+        * 실행 계획이 인덱스를 사용하는 경우, 정렬한 결과를 얻을 수 있다
+            * **하지만 인덱스가 수정된거나, 옵티마이저가 다른 실행 계획을 선택할 수도 있으니, 정렬이 필요하면 쿼리에 명시해주는 것이 좋다**
+    
+    * INNER JOIN과 OUTER JOIN의 선택
+        * INNER JOIN과 OUTER JOIN의 용도는 다르니 적절하게 사용해야 한다
+        * OUTER JOIN과 INNER JOIN은 실제 가져와야 하는 레코드가 같다면 쿼리의 성능은 거의 차이가 발생하지 않는다
+            * 따라서 INNER JOIN과 OUTER JOIN은 성능을 고려해서 선택할 것이 아니라 업무 요건에 따라 선택하는 것이 바람직하다
+        * 레코드가 결과에 포함되지 않을까 걱정스러운 경우라면, 테이블의 구조와 데이터의 특성을 분석해 INNER JOIN을 사용해야 할지 OUTER JOIN을 사용해야 할지 결정하자
+
+## 실행 계획 분석 시 주의사항
+
+### Select_type 칼럼의 주의 대상
+
+* Derived
+    * 임시 테이블이 메모리에 저장되는 경우는 큰 영향이 없지만, 저장할 데이터 용량이 너무 커져서 디스크에 저장하면 성능이 떨어진다
+
+* UNCACHEABLE SUBQUERY
+    * 사용자 변수나 일부 함수로 인해 서브 쿼리를 캐시하지 못하는 경우, 사용자 변수나 함수 대체를 검토해보는 것이 좋다
+
+* DEPENDENT SUBQUERY
+    * 서브 쿼리기 먼저 실행되지 못하고 외부 쿼리의 결과 값에 의존적이기 때문에 전체 쿼리의 성능을 떨어트린다
+    * 만약 불필요한 의존 관계라면 정리하는 것이 좋다
+
+### Type 칼럼의 주의 대상
+
+* ALL, index
+    * 각각 풀 테이블 스캔, 인덱스 풀 스캔을 의미한다
+    * 새로운 인덱스를 추가하거나 쿼리의 조건을 변경해서 다른 접근 방식을 사용하도록 유도하는 것이 좋다
+
+### Key 칼럼의 주의 대상
+
+* 쿼리가 인덱스를 사용하지 못하면 key 칼럼에 아무것도 표시되지 않는다
+* 인덱스를 사용할 수 있게 where 절을 추가하는 것이 좋다
+
+### Rows 칼럼의 주의 대상
+
+* 실제로 가져오고 있는 레코드 수보다 훨씬 더 큰 값이 표시되는 경우, 인덱스를 정상적으로 사용하고 있는지 확인해야 한다
+* 인덱스가 충분히 작업 범위를 좁혀 줄 수 있는 칼럼으로 구성됐는지 검토해보고 식별성 있는 칼럼으로 인덱스를 다시 생성하거나 쿼리의 조건을 변경해보는 것이 좋다
+
+* LIMIT이 포함된 쿼리라 하더라도 LIMIT의 제한은 Rows 칼럼의 고려 대상에서 제외된다
+
+### Extra 칼럼의 주의 대상
+
+* 쿼리가 요건을 제대로 반영하고 있는지 확인해야 하는 경우
+    * Full scan on NULL key
+    * Imposiible HAVING(MySQL 5.1부터)
+    * Impossible WHERE(MySQL 5.1부터)
+    * Impossible WHERE noticed after reading const tables
+    * No matching min/max row(MySQL 5.1부터)
+    * No matching row in const table(MySQL 5.1부터)
+    * Unique row not found(MySQL 5.1부터)
+
+    * 위와 같은 코멘트가 extra 칼럼에 표시된다면 우선 쿼리가 요건을 제대로 반영해서 작성됐거나 버그가 생길 가능성은 없는지 확인해보자
+    * 또는 테이블에 레코드가 있는지도 확인해보자
+    * **위 항목들은 성능보단 레코드가 없음이라는 의미가 강하기 때문에 이 쿼리로 인한 버그의 가능성이 있을지를 집중적으로 검토하는 것이 좋다**
+
+* 쿼리의 실행 계획이 좋지 않는 경우
+    * Ranged checked for each record (index map N)
+    * Using filesort
+    * Using join buffer(MySQL 5.1부터)
+    * Using temporary
+    * Using where
+
+    * 위와 같은 코멘트가 표시될 경우, 쿼리를 최적화할 수 있는지 검토해보는 것이 좋다
+    * 마지막의 Using where은 대부분의 쿼리에서 표시되는데, rows 건수가 실제 결과보다 훨씬 높은 경우, 차이를 최대한 줄이는 것이 좋다
+
+* 쿼리의 실행 계획이 좋은 경우
+    * Distinct
+    * Using index
+    * Using index for group-by
+
+    * 위 항목들은 쿼리가 최적화돼 있음을 알려주는 지표 정도로 생각하면 된다
+    * 특히 Using index는 커버링 인덱스를 사용하고 있음을 의미하며, 이는 MySQL이 제공할 수 있는 최고의 성능을 보여준다
+    * 만약 쿼리를 아무리 최적화해도 성능 요건에 미치지 못한다면 인덱스 만으로 쿼리가 처리되는 형태를 유도해보는 것도 좋다
