--- a/디자인 패턴/이론/8. Template Method Pattern.md
+++ b/디자인 패턴/이론/8. Template Method Pattern.md
@@ -1,6 +1,6 @@
 # 8. Template Method Pattern
 
-**Template Method 패턴 어떤 작업을 처리하는 일부분을 서브 클래스로 캡슗ㅎ해전체 일을 수행하는 구조는 바꾸지 않으면ㅅ 특정 단계에서 수행하는 내역을 바꾸는 패턴이다**
+**Template Method 패턴 어떤 작업을 처리하는 일부분을 서브 클래스로 캡슐화해서 전체 일을 수행하는 구조는 바꾸지 않으면ㅅ 특정 단계에서 수행하는 내역을 바꾸는 패턴이다**
 
 * 템플릿 메소드 패턴으로 훅을 구현할 수 있다
 ```java
